--- a/app/src/main/res/layout/dev_inf.xml
+++ b/app/src/main/res/layout/dev_inf.xml
@@ -53,8 +53,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:orientation="vertical"
-        android:layout_gravity="bottom">
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/textView5"
