--- a/app/src/main/res/layout/info_tab1.xml
+++ b/app/src/main/res/layout/info_tab1.xml
@@ -155,13 +155,13 @@
                             android:textColor="#000000" />
 
                         <TextView
-                            android:text="굳은 의지"
+                            android:id="@+id/gyomokx"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/gyomokx"
+                            android:text="소나무 - 굳은 의지"
+                            android:textColor="#9E9E9E"
                             android:textSize="15sp"
-                            android:textStyle="normal|bold"
-                            android:textColor="#9E9E9E" />
+                            android:textStyle="normal|bold" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -234,22 +234,16 @@
                             android:textColor="#000000" />
 
                         <TextView
-                            android:text="학문을 향한 열정"
+                            android:id="@+id/gyohwax"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/gyohwax"
+                            android:text="백목일홍 - 학문을 향한 열정"
+                            android:textColor="#9E9E9E"
                             android:textSize="15sp"
-                            android:textStyle="normal|bold"
-                            android:textColor="#9E9E9E" />
+                            android:textStyle="normal|bold" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#E0E0E0" />
 
             <LinearLayout
                 android:orientation="vertical"
