--- a/app/src/main/res/layout/noty_incl.xml
+++ b/app/src/main/res/layout/noty_incl.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#000000"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -123,6 +130,51 @@
 
             <TextView
                 android:id="@+id/cv3x"
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+            <android.support.v7.widget.CardView
+                android:layout_width="345dp"
+                android:layout_height="wrap_content"
+                app:cardElevation="5dp">
+                <LinearLayout
+                    android:layout_width="345dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/ad_2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorPrimary"
+                        android:gravity="center"
+                        android:text="광고(플레이스토어 유지비)"
+                        android:textAlignment="center"
+                        android:textColor="#FFFFFF"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <com.google.android.gms.ads.AdView
+                            android:id="@+id/money2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_centerHorizontal="true"
+                            ads:adSize="BANNER"
+                            ads:adUnitId="@string/money_2"></com.google.android.gms.ads.AdView>
+                    </LinearLayout>
+
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:id="@+id/cv4x"
                 android:layout_width="match_parent"
                 android:layout_height="10dp" />
 
